--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/DataFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.test.test.ui.FirstFragment"
+        android:id="@+id/DataFragment"
+        android:name="com.weather.alerts.ui.DataFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_data">
     </fragment>
 </navigation>
